commit marghe